# PyDS

./: .gitignore  PyDS.py  README.md  pyproject.toml  setup.py
pyds/: __init__.py
